--- a/whatsnew.html
+++ b/whatsnew.html
@@ -95,7 +95,7 @@
               <h3 class="blog-title">Recruitments</h3>
               <p class="blog-date">13 Apr,2020</p>
               <p class="blog-text">
-                You have a passionate for design and can't find a job? Are you
+                You have a passion for design and can't find a job? Are you
                 looking for a collaborative team with a lovely mission? Let’s
                 talk!
               </p>
