--- a/whatsnew.html
+++ b/whatsnew.html
@@ -80,7 +80,7 @@
     <!--Slider-->
     <div class="big-container">
     <div class="glider-contain multiple">
-      <h2>Check out our latesc blogs!</h2>
+      <h2>Check out our latest blogs!</h2>
       
       <button class="glider-prev">
         <i class="fas fa-chevron-left"></i>
